--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4a5568; /* You can choose different colors */
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #1e293b; /* You can choose different colors */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #64748b; /* You can choose different colors */
+}
